added some styles, finish adding lorems

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="description" content="An implementation of Gil Huybrecht's Outdoors design" />
 		<meta name="keywords" content="template, web design, html, javascript, layout, css, slide out" />
 		<meta name="author" content="Codrops" />
-		<link rel="shortcut icon" href="favicon.ico">
+		
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="css/base.css" />
@@ -60,20 +60,14 @@
 		<main>
 			<div class="sections">
 				<header class="sections__header">
-					<h1 class="title">Outdoors</h1>
+					<h1 class="title">VRTICAL</h1>
 				</header>
-				<!-- codrops links -->
-				<div class="codrops-links">
-					<a class="codrops-icon codrops-icon--prev" href="https://tympanus.net/Development/GradientTopographyAnimation/" title="Previous Demo"><svg class="icon icon--arrow"><use xlink:href="#icon-arrow"></use></svg></a>
-					<a class="codrops-icon codrops-icon--drop" href="https://tympanus.net/codrops/?p=33851" title="Back to the article"><svg class="icon icon--drop"><use xlink:href="#icon-drop"></use></svg></a>
-				</div>
 				<!-- menu -->
 				<nav class="menu">
 					<ul class="menu__inner">
-						<li class="menu__item"><a class="menu__item-link" href="#">Our Story</a></li>
-						<li class="menu__item"><a class="menu__item-link" href="#">Adventures</a></li>
-						<li class="menu__item"><a class="menu__item-link" href="#">Testimonials</a></li>
-						<li class="menu__item"><a class="menu__item-link" href="#">Contact</a></li>
+						<li class="menu__item"><a class="menu__item-link" href="#">Sobre nosotros</a></li>
+						<li class="menu__item"><a class="menu__item-link" href="#">Productos</a></li>
+						<li class="menu__item"><a class="menu__item-link" href="#">Contacto</a></li>
 					</ul>
 					<div class="menu__toggle">
 						<span class="menu__toggle-inner menu__toggle-inner--open">
@@ -119,17 +113,17 @@
 				<!-- sections -->
 				<section class="section section--current">
 					<div class="section__content">
-						<h2 class="section__title">Hiking</h2>
-						<p class="section__description"><span class="section__description-inner">Hiking is the preferred term, in Canada and the United States, for a long, vigorous walk, usually on trails (footpaths), in the countryside, while the word walking is used for shorter, particularly urban walks.</span></p>
+						<h2 class="section__title">VRápel</h2>
+						<p class="section__description"><span class="section__description-inner">VRápel es un producto de realidad aumentada. dolor sit amet, consectetur adipiscing elit. Nulla in quam rutrum, pulvinar arcu vel, vulputate nisl. Cras pellentesque nisi in tortor congue, in fringilla nunc scelerisque. Integer viverra consequat lacus, ac sollicitudin ante.</span></p>
 					</div>
 					<div class="section__img">
 						<div class="section__img-inner" style="background-image: url(img/1.jpg)"></div>
 					</div>
 					<div class="section__more">
 						<div class="section__more-inner section__more-inner--bg1">
-							<span class="section__more-text">Want to know more?</span>
+							<span class="section__more-text">Conoce mas</span>
 							<a href="#" class="section__more-link">
-								<span class="section__more-linktext">Explore all hikes</span>
+								<span class="section__more-linktext"></span>
 								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
 							</a>
 						</div>
@@ -137,28 +131,28 @@
 					<div class="section__expander"></div>
 					<ul class="section__facts">
 						<li class="section__facts-item">
-							<h3 class="section__facts-title">Biggest lake</h3>
-							<span class="section__facts-detail">Caspian sea in Kazakhstan</span>
+							<h3 class="section__facts-title">Miedo a las alturas?</h3>
+							<span class="section__facts-detail">dolor sit amet, consectetur</span>
 						</li>
 						<li class="section__facts-item">
-							<h3 class="section__facts-title">Coolest activity</h3>
-							<span class="section__facts-detail">Kayaking the whole lake</span>
+							<h3 class="section__facts-title">Tecnologia comprobada</h3>
+							<span class="section__facts-detail">Cras pellentesque nisi</span>
 						</li>
 						<li class="section__facts-item">
-							<h3 class="section__facts-title">Lake depth</h3>
-							<span class="section__facts-detail">With 55m it's the deepest</span>
+							<h3 class="section__facts-title">Que es VR?</h3>
+							<span class="section__facts-detail">lacus, ac sollicitudin ante</span>
 						</li>
 						<li class="section__facts-item section__facts-item--clickable" data-gallery="gallery1">
 							<div class="section__facts-img">
 								<img src="img/thumb1.jpg" alt="Some image"/>
 								<svg class="icon icon--grid"><use xlink:href="#icon-grid"></use></svg>
 							</div>
-							<h3 class="section__facts-title">More impressions</h3>
-							<span class="section__facts-detail">A collection of images</span>
+							<h3 class="section__facts-title">Ver galeria...</h3>
+							<span class="section__facts-detail">Conoce mas</span>
 						</li>
 					</ul>
 					<div class="section__gallery" id="gallery1">
-						<h3 class="section__gallery-item section__gallery-item--title">More impressions</h3>
+						<h3 class="section__gallery-item section__gallery-item--title">Galeria de fotos</h3>
 						<a class="section__gallery-item" href="#"><img src="img/thumb1.jpg" alt="Some image"/></a>
 						<a class="section__gallery-item" href="#"><img src="img/thumb2.jpg" alt="Some image"/></a>
 						<a class="section__gallery-item" href="#"><img src="img/thumb3.jpg" alt="Some image"/></a>
@@ -169,17 +163,17 @@
 				</section><!--/ section -->
 				<section class="section">
 					<div class="section__content">
-						<h2 class="section__title">Lakes</h2>
-						<p class="section__description"><span class="section__description-inner">A lake is an area filled with water, localized in a basin, that is surrounded by land, apart from any river or other outlet that serves to feed or drain the lake. Lakes lie on land and are not part of the ocean.</span></p>
+						<h2 class="section__title">lorem</h2>
+						<p class="section__description"><span class="section__description-inner">Nulla in quam rutrum, pulvinar arcu vel, vulputate nisl. Cras pellentesque nisi in tortor congue, in fringilla nunc scelerisque.</span></p>
 					</div>
 					<div class="section__img">
 						<div class="section__img-inner" style="background-image: url(img/2.jpg)"></div>
 					</div>
 					<div class="section__more">
 						<div class="section__more-inner section__more-inner--bg2">
-							<span class="section__more-text">Want to know more?</span>
+							<span class="section__more-text">Dolor sit amet?</span>
 							<a href="#" class="section__more-link">
-								<span class="section__more-linktext">Explore the lakes</span>
+								<span class="section__more-linktext">Lorem ipsum</span>
 								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
 							</a>
 						</div>
@@ -219,7 +213,7 @@
 				</section><!--/ section -->
 				<section class="section">
 					<div class="section__content">
-						<h2 class="section__title">Paths</h2>
+						<h2 class="section__title">Sit</h2>
 						<p class="section__description"><span class="section__description-inner">A footpath (also pedestrian way, walking trail, nature trail) is a type of thoroughfare that is intended for use only by pedestrians and not other forms of traffic such as motorized vehicles, cycles, and horses.</span></p>
 					</div>
 					<div class="section__img">
@@ -227,9 +221,9 @@
 					</div>
 					<div class="section__more">
 						<div class="section__more-inner section__more-inner--bg3">
-							<span class="section__more-text">Want to know more?</span>
+							<span class="section__more-text">Dolor sit amet?</span>
 							<a href="#" class="section__more-link">
-								<span class="section__more-linktext">Explore the paths</span>
+								<span class="section__more-linktext">Lorem ipsum</span>
 								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
 							</a>
 						</div>
@@ -256,7 +250,7 @@
 				</section><!--/ section -->
 				<section class="section">
 					<div class="section__content">
-						<h2 class="section__title">Rivers</h2>
+						<h2 class="section__title">Amet</h2>
 						<p class="section__description"><span class="section__description-inner">A river is a natural flowing watercourse, usually freshwater, flowing towards an ocean, sea, lake or another river. In some cases a river flows into the ground and becomes dry at the end of its course without reaching another body of water.</span></p>
 					</div>
 					<div class="section__img">
@@ -264,9 +258,9 @@
 					</div>
 					<div class="section__more">
 						<div class="section__more-inner section__more-inner--bg4">
-							<span class="section__more-text">Want to know more?</span>
+							<span class="section__more-text">Dolor sit amet?</span>
 							<a href="#" class="section__more-link">
-								<span class="section__more-linktext">Explore all rivers</span>
+								<span class="section__more-linktext">Lorem ipsum</span>
 								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
 							</a>
 						</div>
