added image and fixed readme

--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Outdoors Template | Codrops</title>
-		<meta name="description" content="An implementation of Gil Huybrecht's Outdoors design" />
-		<meta name="keywords" content="template, web design, html, javascript, layout, css, slide out" />
-		<meta name="author" content="Codrops" />
+		<title>VR Rapel</title>
+		<!-- <meta name="description" content="An implementation of Gil Huybrecht's Outdoors design" />
+		<meta name="keywords" content="template, web design, html, javascript, layout, css, slide out" /> -->
+		<!-- <meta name="author" content="Carlos Gómez" /> -->
 		
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="css/base.css" />
 		<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
-		<!--script src="//tympanus.net/codrops/adpacks/analytics.js"></script-->
 	</head>
 	<body class="loading">
 		<svg class="hidden">
@@ -71,7 +70,8 @@
 					</ul>
 					<div class="menu__toggle">
 						<span class="menu__toggle-inner menu__toggle-inner--open">
-							<svg class="icon icon--menu"><use xlink:href="#icon-menu"></use></svg>
+							<!-- <svg class="icon icon--menu"><use xlink:href="#icon-menu"></use></svg> -->
+							menu
 						</span>
 						<span class="menu__toggle-inner menu__toggle-inner--close">
 							<svg class="icon icon--close"><use xlink:href="#icon-close"></use></svg>
@@ -83,11 +83,11 @@
 					<div class="facts__toggle">
 						<span class="facts__toggle-inner facts__toggle-inner--more">
 							<svg class="icon icon--dot"><use xlink:href="#icon-dot"></use></svg>
-							<span class="facts__toggle-text">See more facts</span>
+							<span class="facts__toggle-text">galeria</span>
 						</span>
 						<span class="facts__toggle-inner facts__toggle-inner--less">
 							<svg class="icon icon--cross"><use xlink:href="#icon-cross"></use></svg>
-							<span class="facts__toggle-text">See less facts</span>
+							<span class="facts__toggle-text">cerrar</span>
 						</span>
 					</div>
 					<button class="button-contentclose">
@@ -114,10 +114,11 @@
 				<section class="section section--current">
 					<div class="section__content">
 						<h2 class="section__title">VRápel</h2>
-						<p class="section__description"><span class="section__description-inner">VRápel es un producto de realidad aumentada. dolor sit amet, consectetur adipiscing elit. Nulla in quam rutrum, pulvinar arcu vel, vulputate nisl. Cras pellentesque nisi in tortor congue, in fringilla nunc scelerisque. Integer viverra consequat lacus, ac sollicitudin ante.</span></p>
+						<p class="section__description"><span class="section__description-inner">VRápel es un producto entrenar Rapel
+							en un ambiente controlado. </span></p>
 					</div>
 					<div class="section__img">
-						<div class="section__img-inner" style="background-image: url(img/1.jpg)"></div>
+						<div class="section__img-inner" style="background-image: url(img/rapel_01.jpg)"></div>
 					</div>
 					<div class="section__more">
 						<div class="section__more-inner section__more-inner--bg1">
