--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>VR Rapel</title>
+		<title>VRapel</title>
 		<!-- <meta name="description" content="An implementation of Gil Huybrecht's Outdoors design" />
 		<meta name="keywords" content="template, web design, html, javascript, layout, css, slide out" /> -->
 		<!-- <meta name="author" content="Carlos Gómez" /> -->
@@ -59,7 +59,8 @@
 		<main>
 			<div class="sections">
 				<header class="sections__header">
-					<h1 class="title">VRTICAL</h1>
+					<!-- <h1 class="title">VRTICAL</h1> -->
+					<div class="section__img-inner logo_vrtical" style="background-image: url(img/vrtical.svg)"></div>
 				</header>
 				<!-- menu -->
 				<nav class="menu">
@@ -99,7 +100,7 @@
 					<span class="sections__index-current">
 						<span class="sections__index-inner">01</span>
 					</span>
-					<span class="sections__index-total">04</span>
+					<span class="sections__index-total">02</span>
 				</div>
 				<!-- navigation down -->
 				<nav class="sections__nav">
@@ -114,8 +115,11 @@
 				<section class="section section--current">
 					<div class="section__content">
 						<h2 class="section__title">VRápel</h2>
+						<!-- <h2 class="section__title"></h2> -->
+						<!-- <div class="section__img-inner logo_vrapel" style="background-image: url(img/vrapel.svg)"></div> -->
 						<p class="section__description"><span class="section__description-inner">VRápel es un producto entrenar Rapel
-							en un ambiente controlado. </span></p>
+							en un ambiente controladode esta manera poder aprender y 
+							lograr tener el conocimiento basico para poder ir a practicar Rápel en condiciones mas extremas.</span></p>
 					</div>
 					<div class="section__img">
 						<div class="section__img-inner" style="background-image: url(img/rapel_01.jpg)"></div>
@@ -145,7 +149,7 @@
 						</li>
 						<li class="section__facts-item section__facts-item--clickable" data-gallery="gallery1">
 							<div class="section__facts-img">
-								<img src="img/thumb1.jpg" alt="Some image"/>
+								<img src="img/mountains_01.png" alt="Some image"/>
 								<svg class="icon icon--grid"><use xlink:href="#icon-grid"></use></svg>
 							</div>
 							<h3 class="section__facts-title">Ver galeria...</h3>
@@ -153,22 +157,21 @@
 						</li>
 					</ul>
 					<div class="section__gallery" id="gallery1">
-						<h3 class="section__gallery-item section__gallery-item--title">Galeria de fotos</h3>
-						<a class="section__gallery-item" href="#"><img src="img/thumb1.jpg" alt="Some image"/></a>
-						<a class="section__gallery-item" href="#"><img src="img/thumb2.jpg" alt="Some image"/></a>
-						<a class="section__gallery-item" href="#"><img src="img/thumb3.jpg" alt="Some image"/></a>
-						<a class="section__gallery-item" href="#"><img src="img/thumb4.jpg" alt="Some image"/></a>
-						<a class="section__gallery-item" href="#"><img src="img/thumb5.jpg" alt="Some image"/></a>
-						<a class="section__gallery-item" href="#"><img src="img/thumb6.jpg" alt="Some image"/></a>
+						<h3 class="section__gallery-item section__gallery-item--title"></h3>
+						<a class="section__gallery-item" href="#"><img src="img/candados.jpg" alt="Some image"/></a>
+						<a class="section__gallery-item" href="#"><img src="img/candados_02.jpg" alt="Some image"/></a>
+						<a class="section__gallery-item" href="#"><img src="img/mountains_01.png" alt="Some image"/></a>
+						<a class="section__gallery-item" href="#"><img src="img/mountains_02.png" alt="Some image"/></a>
 					</div>
-				</section><!--/ section -->
+				</section>
 				<section class="section">
 					<div class="section__content">
-						<h2 class="section__title">lorem</h2>
-						<p class="section__description"><span class="section__description-inner">Nulla in quam rutrum, pulvinar arcu vel, vulputate nisl. Cras pellentesque nisi in tortor congue, in fringilla nunc scelerisque.</span></p>
+						<h2 class="section__title">Somos</h2>
+						<p class="section__description"><span class="section__description-inner">
+							Somos una empresa dedicada al desarrollo de simuladores, enfocado a la realidad virtual.</span></p>
 					</div>
 					<div class="section__img">
-						<div class="section__img-inner" style="background-image: url(img/2.jpg)"></div>
+						<div class="section__img-inner" style="background-image: url(img/mountains_01.png)"></div>
 					</div>
 					<div class="section__more">
 						<div class="section__more-inner section__more-inner--bg2">
@@ -182,37 +185,37 @@
 					<div class="section__expander"></div>
 					<ul class="section__facts">
 						<li class="section__facts-item">
-							<h3 class="section__facts-title">Biggest lake</h3>
-							<span class="section__facts-detail">Caspian sea in Kazakhstan</span>
+							<!-- <h3 class="section__facts-title">Biggest lake</h3>
+							<span class="section__facts-detail">Caspian sea in Kazakhstan</span> -->
 						</li>
 						<li class="section__facts-item">
-							<h3 class="section__facts-title">Coolest activity</h3>
-							<span class="section__facts-detail">Kayaking the whole lake</span>
+							<!-- <h3 class="section__facts-title">Coolest activity</h3>
+							<span class="section__facts-detail">Kayaking the whole lake</span> -->
 						</li>
 						<li class="section__facts-item">
-							<h3 class="section__facts-title">Lake depth</h3>
-							<span class="section__facts-detail">With 55m it's the deepest</span>
+							<!-- <h3 class="section__facts-title">Lake depth</h3>
+							<span class="section__facts-detail">With 55m it's the deepest</span> -->
 						</li>
 						<li class="section__facts-item section__facts-item--clickable" data-gallery="gallery2">
 							<div class="section__facts-img">
-								<img src="img/thumb2.jpg" alt="Some image"/>
-								<svg class="icon icon--grid"><use xlink:href="#icon-grid"></use></svg>
+								<!-- <img src="img/thumb2.jpg" alt="Some image"/> -->
+								<!-- <svg class="icon icon--grid"><use xlink:href="#icon-grid"></use></svg> -->
 							</div>
-							<h3 class="section__facts-title">More impressions</h3>
-							<span class="section__facts-detail">A collection of images</span>
+							<!-- <h3 class="section__facts-title">More impressions</h3>
+							<span class="section__facts-detail">A collection of images</span> -->
 						</li>
 					</ul>
 					<div class="section__gallery" id="gallery2">
-						<h3 class="section__gallery-item section__gallery-item--title">More impressions</h3>
+						<!-- <h3 class="section__gallery-item section__gallery-item--title">More impressions</h3>
 						<a class="section__gallery-item" href="#"><img src="img/thumb5.jpg" alt="Some image"/></a>
 						<a class="section__gallery-item" href="#"><img src="img/thumb6.jpg" alt="Some image"/></a>
 						<a class="section__gallery-item" href="#"><img src="img/thumb1.jpg" alt="Some image"/></a>
 						<a class="section__gallery-item" href="#"><img src="img/thumb2.jpg" alt="Some image"/></a>
 						<a class="section__gallery-item" href="#"><img src="img/thumb3.jpg" alt="Some image"/></a>
-						<a class="section__gallery-item" href="#"><img src="img/thumb4.jpg" alt="Some image"/></a>
+						<a class="section__gallery-item" href="#"><img src="img/thumb4.jpg" alt="Some image"/></a> -->
 					</div>
-				</section><!--/ section -->
-				<section class="section">
+				</section>
+				<!-- <section class="section">
 					<div class="section__content">
 						<h2 class="section__title">Sit</h2>
 						<p class="section__description"><span class="section__description-inner">A footpath (also pedestrian way, walking trail, nature trail) is a type of thoroughfare that is intended for use only by pedestrians and not other forms of traffic such as motorized vehicles, cycles, and horses.</span></p>
@@ -248,8 +251,8 @@
 							<span class="section__facts-detail">An aerial view of the lake</span>
 						</li>
 					</ul>
-				</section><!--/ section -->
-				<section class="section">
+				</section> -->
+				<!-- <section class="section">
 					<div class="section__content">
 						<h2 class="section__title">Amet</h2>
 						<p class="section__description"><span class="section__description-inner">A river is a natural flowing watercourse, usually freshwater, flowing towards an ocean, sea, lake or another river. In some cases a river flows into the ground and becomes dry at the end of its course without reaching another body of water.</span></p>
@@ -285,7 +288,7 @@
 							<span class="section__facts-detail">An aerial view of the lake</span>
 						</li>
 					</ul>
-				</section><!--/ section -->
+				</section> -->
 			</div><!--/ sections -->
 		</main>
 		<script src="js/imagesloaded.pkgd.min.js"></script>
