added new files

--- a/index.html
+++ b/index.html
@@ -59,15 +59,15 @@
 		<main>
 			<div class="sections">
 				<header class="sections__header">
-					<!-- <h1 class="title">VRTICAL</h1> -->
-					<div class="section__img-inner logo_vrtical" style="background-image: url(img/vrtical.svg)"></div>
+					<h1 class="title">VRTICAL</h1>
+					<!-- <div class="section__img-inner logo_vrtical" style="background-image: url(img/vrtical.svg)"></div> -->
 				</header>
 				<!-- menu -->
 				<nav class="menu">
 					<ul class="menu__inner">
-						<li class="menu__item"><a class="menu__item-link" href="#">Sobre nosotros</a></li>
-						<li class="menu__item"><a class="menu__item-link" href="#">Productos</a></li>
-						<li class="menu__item"><a class="menu__item-link" href="#">Contacto</a></li>
+						<li class="menu__item"><a class="menu__item-link" href="about.html">Sobre nosotros</a></li>
+						<li class="menu__item"><a class="menu__item-link" href="gallery.html">Galeria</a></li>
+						<li class="menu__item"><a class="menu__item-link" href="contact.html">Contacto</a></li>
 					</ul>
 					<div class="menu__toggle">
 						<span class="menu__toggle-inner menu__toggle-inner--open">
@@ -96,21 +96,21 @@
 					</button>
 				</div>
 				<!-- index -->
-				<div class="sections__index">
+				<!-- <div class="sections__index">
 					<span class="sections__index-current">
 						<span class="sections__index-inner">01</span>
 					</span>
 					<span class="sections__index-total">02</span>
-				</div>
+				</div> -->
 				<!-- navigation down -->
-				<nav class="sections__nav">
+				<!-- <nav class="sections__nav">
 					<button class="sections__nav-item sections__nav-item--prev">
 						<svg class="icon icon--navup"><use xlink:href="#icon-navup"></use></svg>
 					</button>
 					<button class="sections__nav-item sections__nav-item--next">
 						<svg class="icon icon--navdown"><use xlink:href="#icon-navdown"></use></svg>
 					</button>
-				</nav>
+				</nav> -->
 				<!-- sections -->
 				<section class="section section--current">
 					<div class="section__content">
@@ -164,7 +164,7 @@
 						<a class="section__gallery-item" href="#"><img src="img/mountains_02.png" alt="Some image"/></a>
 					</div>
 				</section>
-				<section class="section">
+				<!-- <section class="section">
 					<div class="section__content">
 						<h2 class="section__title">Somos</h2>
 						<p class="section__description"><span class="section__description-inner">
@@ -186,23 +186,23 @@
 					<ul class="section__facts">
 						<li class="section__facts-item">
 							<!-- <h3 class="section__facts-title">Biggest lake</h3>
-							<span class="section__facts-detail">Caspian sea in Kazakhstan</span> -->
+							<span class="section__facts-detail">Caspian sea in Kazakhstan</span> -
 						</li>
 						<li class="section__facts-item">
 							<!-- <h3 class="section__facts-title">Coolest activity</h3>
-							<span class="section__facts-detail">Kayaking the whole lake</span> -->
+							<span class="section__facts-detail">Kayaking the whole lake</span> -
 						</li>
 						<li class="section__facts-item">
 							<!-- <h3 class="section__facts-title">Lake depth</h3>
-							<span class="section__facts-detail">With 55m it's the deepest</span> -->
+							<span class="section__facts-detail">With 55m it's the deepest</span> -
 						</li>
 						<li class="section__facts-item section__facts-item--clickable" data-gallery="gallery2">
 							<div class="section__facts-img">
 								<!-- <img src="img/thumb2.jpg" alt="Some image"/> -->
-								<!-- <svg class="icon icon--grid"><use xlink:href="#icon-grid"></use></svg> -->
+								<!-- <svg class="icon icon--grid"><use xlink:href="#icon-grid"></use></svg> -
 							</div>
 							<!-- <h3 class="section__facts-title">More impressions</h3>
-							<span class="section__facts-detail">A collection of images</span> -->
+							<span class="section__facts-detail">A collection of images</span> 
 						</li>
 					</ul>
 					<div class="section__gallery" id="gallery2">
@@ -212,9 +212,9 @@
 						<a class="section__gallery-item" href="#"><img src="img/thumb1.jpg" alt="Some image"/></a>
 						<a class="section__gallery-item" href="#"><img src="img/thumb2.jpg" alt="Some image"/></a>
 						<a class="section__gallery-item" href="#"><img src="img/thumb3.jpg" alt="Some image"/></a>
-						<a class="section__gallery-item" href="#"><img src="img/thumb4.jpg" alt="Some image"/></a> -->
+						<a class="section__gallery-item" href="#"><img src="img/thumb4.jpg" alt="Some image"/></a> -
 					</div>
-				</section>
+				</section> -->
 				<!-- <section class="section">
 					<div class="section__content">
 						<h2 class="section__title">Sit</h2>
