removed media querys

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" type="text/css" href="css/normalize.css" />
-    <link rel="stylesheet" type="text/css" href="css/base.css" />
+    <link rel="stylesheet" type="text/css" href="css/base.1.css" />
 
     <script>
       document.documentElement.className = "js";
@@ -41,6 +41,14 @@
     </script>
   </head>
   <body class="loading">
+    <svg class="hidden">
+      <symbol id="icon-close" viewBox="0 0 24 24">
+        <title>close</title>
+        <path
+          d="M21 4.565L19.435 3 12 10.435 4.565 3 3 4.565 10.435 12 3 19.435 4.565 21 12 13.565 19.435 21 21 19.435 13.565 12z"
+        />
+      </symbol>
+    </svg>
     <main>
       <div class="sections">
         <header class="sections__header">
@@ -98,12 +106,17 @@
           </button>
         </div>
         <!-- sections -->
-        <div style="    padding: 120px 16%;">                
-                <i>VRtical</i> es una empresa de software, se enfoca en crear simuladores de 
-                realidad virtual para educacion o entrenamiento.
-                En <i>VRtical</i> nos preocupamos por tu seguridad y aplicamos la mejor tecnologia
-                para crear una experiencia mas sercana a la realidad sin tener ningun peligro.
-            </div>
+        <div style="    padding: 120px 16%;">
+          <p class="section__description">
+            <span class="section__description-inner">
+              <i>VRtical</i> es una empresa de software, se enfoca en crear
+              simuladores de realidad virtual para educacion o entrenamiento. En
+              <i>VRtical</i> nos preocupamos por tu seguridad y aplicamos la
+              mejor tecnologia para crear una experiencia mas sercana a la
+              realidad sin tener ningun peligro.
+            </span>
+          </p>
+        </div>
         <div class="footer ">
           <div class="footer-wraper">
             <ul class="list-style-none d-flex flex-wrap ">
